<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_category">添加分类</string>
    <string name="app_name">我的记账本</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="backup_count">备份条数</string>
    <string name="backup_device">备份设备</string>
    <string name="backup_file_size">文件大小</string>
    <string name="backup_time">备份时间</string>
    <string name="backup_version">备份版本</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="calendar">Calendar</string>
    <string name="cancel">取消</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="complete">完成</string>
    <string name="confirm">确定</string>
    <string name="date_format_date_format_yesterday_time">昨天 HH:mm</string>
    <string name="date_format_m_d">MM月dd日</string>
    <string name="date_format_today">今天</string>
    <string name="date_format_today_time">今天 HH:mm</string>
    <string name="date_format_y">yyyy年</string>
    <string name="date_format_y_m">yyyy年MM月</string>
    <string name="date_format_y_m_d">yyyy年MM月dd日</string>
    <string name="date_format_y_m_d_hh_mm">yyyy年MM月dd日 HH:mm</string>
    <string name="date_format_yesterday">昨天</string>
    <string name="delete">删除</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_btn_choose_local_file">从本地文件选取</string>
    <string name="dialog_btn_delete">删除</string>
    <string name="dialog_budget_edit_hint">输入本月预算</string>
    <string name="dialog_budget_error_illegal_input">预算金额必须大于0</string>
    <string name="dialog_budget_set_title">设置月预算</string>
    <string name="dialog_data_pick_time_input_label">请输入时间（24小时制）</string>
    <string name="dialog_title_delete_confirm">确定删除？</string>
    <string name="download_apk">下载安装包</string>
    <string name="drag_2_order">拖拽排序</string>
    <string name="edit_category">编辑分类</string>
    <string name="err_category_already_exist">该分类已存在</string>
    <string name="expense_category">支出</string>
    <string name="fingerprint_auth_err_no_fingerprint">未添加指纹</string>
    <string name="fingerprint_auth_err_no_hardware">未识别到指纹传感器</string>
    <string name="fingerprint_auth_err_no_screen_lock">需要先设置系统锁屏</string>
    <string name="fingerprint_auth_tip">请验证指纹</string>
    <string name="hour">时</string>
    <string name="income_category">收入</string>
    <string name="libPermissionCamera">相机</string>
    <string name="libPermissionDeniedForeverDesc" formatted="false">在设置-应用-%s-权限中开启%s权限，以正常使用此功能</string>
    <string name="libPermissionLoc">位置</string>
    <string name="libPermissionPhoneState">设备信息</string>
    <string name="libPermissionReq">权限申请</string>
    <string name="libPermissionReqBtnNegative">取消</string>
    <string name="libPermissionReqBtnPositive">去设置</string>
    <string name="libPermissionStorage">存储空间</string>
    <string name="libupdate_alert_cancel">取消</string>
    <string name="libupdate_alert_confirm_download">下载安装</string>
    <string name="libupdate_alert_do_not_remind_again">不再提示</string>
    <string name="libupdate_alert_new_version_title" formatted="false">新版本 %s (%s)</string>
    <string name="libupdate_alert_on_checking_new_version">正在检查新版本</string>
    <string name="libupdate_alert_without_wifi">未连接WIFI，将耗费%sM数据流量！</string>
    <string name="libupdate_toast_already_latest_version">已经是最新版本</string>
    <string name="libupdate_toast_http_error" formatted="false">请求出错 Err(%s,%s)</string>
    <string name="loading_layout_button_positive_text_empty">再试一次</string>
    <string name="loading_layout_button_positive_text_error">再试一次</string>
    <string name="loading_layout_message_empty">数据为空，点我重试~</string>
    <string name="loading_layout_message_error">额…出错了~</string>
    <string name="menu_tall_about">关于</string>
    <string name="menu_tally_chart">账单详情</string>
    <string name="menu_tally_date_range_select">选择日期</string>
    <string name="menu_tally_debug">DEBUG</string>
    <string name="menu_tally_manager">管理</string>
    <string name="menu_tally_records">账单记录</string>
    <string name="menu_tally_search">搜索</string>
    <string name="menu_tally_setting">设置</string>
    <string name="menu_tally_sort_category">排序</string>
    <string name="minute">分</string>
    <string name="modify">修改</string>
    <string name="next">Go to next</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_clean_to_0">清零</string>
    <string name="ok">确定</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="permission_phone">手机/电话权限</string>
    <string name="permission_phone_desc">统计应用崩溃信息</string>
    <string name="permission_req_go_open">去开启</string>
    <string name="permission_req_open">开启</string>
    <string name="permission_req_title_format">%s需要以下权限才能正常使用</string>
    <string name="permission_request_desc_export_backup">我的记账本需要存储权限，导出账单数据文件到手机存储中</string>
    <string name="permission_request_desc_export_csv">我的记账本需要存储权限，导出账单 CSV 文件到手机存储中</string>
    <string name="permission_request_desc_import_backup">我的记账本需要存储权限，从手机存储中读取账单数据备份文件</string>
    <string name="permission_request_failed_read_external_storage">请授予读取手机存储权限</string>
    <string name="permission_request_failed_write_external_storage">请授予写入手机存储权限</string>
    <string name="permission_request_refuse_export_backup">"未允许我的记账本获取存储权限，无法从手机存储中读取账单数据备份文件；
点击去授权，手动处理"</string>
    <string name="permission_request_refuse_export_csv">"未允许我的记账本获取存储权限，无法导出账单 CSV 文件到手机存储中；
点击去授权，手动处理"</string>
    <string name="permission_request_refuse_import_backup">"未允许我的记账本获取存储权限，无法从手机存储中读取账单数据备份文件；
点击去授权，手动处理"</string>
    <string name="permission_request_title_export_backup">存储权限说明</string>
    <string name="permission_request_title_export_csv">存储权限说明</string>
    <string name="permission_request_title_import_backup">存储权限说明</string>
    <string name="permission_storage">存储权限</string>
    <string name="permission_storage_desc">导出数据到磁盘或从磁盘中导入数据</string>
    <string name="place_holder">--</string>
    <string name="previous">Go to previous</string>
    <string name="privacy_dialog_btn_agree">同意</string>
    <string name="privacy_dialog_btn_disagree">不同意并退出APP</string>
    <string name="privacy_dialog_content">"欢迎使用我的记账本！

 在您使用我的记账本前，请您认真阅读并了解《用户协议》和《隐私政策》。点击同意即表示您已阅读并同意全部条款。"</string>
    <string name="privacy_dialog_protocol_privacy">《隐私政策》</string>
    <string name="privacy_dialog_protocol_user">《用户协议》</string>
    <string name="privacy_dialog_title">用户协议和隐私政策提示</string>
    <string name="refresh_message_loading_more">正在加载…</string>
    <string name="refresh_message_pull_2_refresh">下拉刷新</string>
    <string name="refresh_message_push_2_load_more">上拉加载更多</string>
    <string name="refresh_message_refreshing">正在刷新…</string>
    <string name="refresh_message_release_2_load_more">释放加载更多</string>
    <string name="refresh_message_release_2_refresh">释放刷新</string>
    <string name="save">保存</string>
    <string name="search_menu_title">Search</string>
    <string name="searchable_hint">搜索</string>
    <string name="searchable_label">mine</string>
    <string name="setting">设置</string>
    <string name="share">分享</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="string_format_date_y_m" formatted="false">%d年%d月</string>
    <string name="symbol_dot">.</string>
    <string name="tally_about_about_app_content">本应用基于 coderpage 的「我的记账本」开发，感谢原作者的出色工作。\n\n当前仓库：https://github.com/Selee1995/lightweight-ledger</string>
    <string name="tally_about_about_me_content">coderpage\n邮箱：codenobug@163.com\n仓库：https://github.com/coderpage/Mine</string>
    <string name="tally_about_appreciate_content">EMM…反正入口放这儿了，有没有人给就随缘吧（跟我一样穷的就算了）</string>
    <string name="tally_about_check_new_version">检查更新</string>
    <string name="tally_about_find_new_version" formatted="false">新版本 %s(%d)</string>
    <string name="tally_about_send_email_content">1278329021@qq.com</string>
    <string name="tally_about_source_code_content">https://github.com/Selee1995/lightweight-ledger</string>
    <string name="tally_about_title_about_app">关于应用</string>
    <string name="tally_about_title_about_me">原作者</string>
    <string name="tally_about_title_app_info">应用信息</string>
    <string name="tally_about_title_appreciate">打赏开发者</string>
    <string name="tally_about_title_developer_info">开发者</string>
    <string name="tally_about_title_send_email">发送邮件</string>
    <string name="tally_about_title_source_code">源代码</string>
    <string name="tally_about_title_version">版本</string>
    <string name="tally_about_title_wechat">微信公众号</string>
    <string name="tally_about_wechat_content">微信公众号：mineapp；可以通过公众号反馈意见或者BUG，点击去关注。</string>
    <string name="tally_about_wechat_copied">微信公众号已复制</string>
    <string name="tally_add_record">记一笔…</string>
    <string name="tally_add_record_note">添加备注</string>
</resources>