<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/main_content" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/lyContainer" android:paddingTop="@dimen/toolbar_height" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/spacing_micro">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/app_text_size_medium" android:textColor="@color/appTextColorLabel" android:paddingLeft="@dimen/padding_normal" android:paddingTop="@dimen/padding_normal" android:paddingRight="@dimen/padding_normal" android:paddingBottom="@dimen/padding_micro" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tally_about_title_app_info" />
            <FrameLayout android:id="@id/lyAppInfo" android:paddingLeft="@dimen/padding_normal" android:paddingTop="@dimen/padding_micro" android:paddingRight="@dimen/padding_normal" android:paddingBottom="@dimen/padding_micro" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="?selectableItemBackground">
                <LinearLayout android:layout_gravity="left|center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/app_text_size_normal" android:textColor="@color/appTextColorPrimary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tally_about_title_version" />
                    <TextView android:textSize="@dimen/app_text_size_medium" android:textColor="@color/appTextColorSecondary" android:id="@id/tvAppVersion" android:paddingTop="@dimen/spacing_normal" android:layout_width="match_parent" android:layout_height="wrap_content" />
                </LinearLayout>
                <TextView android:textSize="@dimen/app_text_size_medium" android:textColor="@color/appTextColorPrimary" android:gravity="center" android:layout_gravity="right|center" android:id="@id/tvCheckNewVersion" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/tally_about_check_new_version" />
            </FrameLayout>
            <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/padding_normal" android:paddingTop="@dimen/padding_micro" android:paddingRight="@dimen/padding_normal" android:paddingBottom="@dimen/padding_micro" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="?selectableItemBackground">
                <TextView android:textSize="@dimen/app_text_size_normal" android:textColor="@color/appTextColorPrimary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tally_about_title_about_app" />
                <TextView android:textSize="@dimen/app_text_size_medium" android:textColor="@color/appTextColorSecondary" android:paddingTop="@dimen/spacing_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tally_about_about_app_content" />
            </LinearLayout>
            <TextView android:textSize="@dimen/app_text_size_medium" android:textColor="@color/appTextColorLabel" android:paddingLeft="@dimen/padding_normal" android:paddingTop="@dimen/padding_normal" android:paddingRight="@dimen/padding_normal" android:paddingBottom="@dimen/padding_micro" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tally_about_title_developer_info" />
            <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/padding_normal" android:paddingTop="@dimen/padding_micro" android:paddingRight="@dimen/padding_normal" android:paddingBottom="@dimen/padding_micro" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="?selectableItemBackground">
                <TextView android:textSize="@dimen/app_text_size_normal" android:textColor="@color/appTextColorPrimary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tally_about_title_about_me" />
                <TextView android:textSize="@dimen/app_text_size_medium" android:textColor="@color/appTextColorSecondary" android:paddingTop="@dimen/spacing_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tally_about_about_me_content" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/padding_normal" android:paddingTop="@dimen/padding_micro" android:paddingRight="@dimen/padding_normal" android:paddingBottom="@dimen/padding_micro" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="?selectableItemBackground">
                <TextView android:textSize="@dimen/app_text_size_normal" android:textColor="@color/appTextColorPrimary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tally_about_title_send_email" />
                <TextView android:textSize="@dimen/app_text_size_medium" android:textColor="@color/appTextColorSecondary" android:autoLink="email" android:paddingTop="@dimen/spacing_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tally_about_send_email_content" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/padding_normal" android:paddingTop="@dimen/padding_micro" android:paddingRight="@dimen/padding_normal" android:paddingBottom="@dimen/padding_micro" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="?selectableItemBackground">
                <TextView android:textSize="@dimen/app_text_size_normal" android:textColor="@color/appTextColorPrimary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tally_about_title_source_code" />
                <TextView android:textSize="@dimen/app_text_size_medium" android:textColor="@color/appTextColorSecondary" android:autoLink="web" android:paddingTop="@dimen/spacing_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tally_about_source_code_content" />
            </LinearLayout>
            <TextView android:textSize="@dimen/app_text_size_medium" android:textColor="@color/appTextColorLabel" android:paddingLeft="@dimen/padding_normal" android:paddingTop="@dimen/padding_normal" android:paddingRight="@dimen/padding_normal" android:paddingBottom="@dimen/padding_micro" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="其他" />
            <TextView android:textSize="@dimen/app_text_size_medium" android:textColor="#3775ff" android:gravity="center_vertical" android:id="@id/tv_protocol_user" android:paddingTop="@dimen/spacing_normal" android:paddingBottom="@dimen/spacing_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="用户协议" android:paddingStart="@dimen/padding_normal" android:paddingEnd="@dimen/padding_normal" />
            <TextView android:textSize="@dimen/app_text_size_medium" android:textColor="#3775ff" android:gravity="center_vertical" android:id="@id/tv_protocol_privacy" android:paddingTop="@dimen/spacing_normal" android:paddingBottom="@dimen/spacing_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="隐私政策" android:paddingStart="@dimen/padding_normal" android:paddingEnd="@dimen/padding_normal" />
        </LinearLayout>
    </ScrollView>
    <include android:layout_gravity="top" android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/toolbar" />
</FrameLayout>
