<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@id/main_content" android:tag="layout/tally_module_edit_fragment_0" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <android.support.constraint.ConstraintLayout android:id="@id/lyHeadInfo" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <FrameLayout android:id="@id/lySelectCategoryIcon" android:tag="binding_1" android:padding="6.0dp" android:layout_width="36.0dp" android:layout_height="36.0dp" android:layout_marginTop="12.0dp" android:layout_centerVertical="true" android:layout_marginStart="@dimen/padding_normal" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
                <android.support.v7.widget.AppCompatImageView android:tag="binding_2" android:layout_width="match_parent" android:layout_height="match_parent" />
            </FrameLayout>
            <TextView android:textSize="@dimen/app_text_size_normal" android:textColor="?android:textColorPrimary" android:gravity="center" android:id="@id/tvCategoryName" android:tag="binding_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="@dimen/spacing_normal" app:layout_constraintBottom_toBottomOf="@id/lySelectCategoryIcon" app:layout_constraintStart_toEndOf="@id/lySelectCategoryIcon" app:layout_constraintTop_toTopOf="@id/lySelectCategoryIcon" />
            <TextView android:textSize="@dimen/app_text_size_medium" android:textColor="?android:textColorPrimary" android:id="@id/tv_money_unit" android:tag="binding_4" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBaseline_toBaselineOf="@id/etAmount" app:layout_constraintEnd_toStartOf="@id/etAmount" />
            <TextView android:textSize="@dimen/app_text_size_large" android:textColor="?android:textColorPrimary" android:gravity="center" android:id="@id/etAmount" android:tag="binding_5" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:inputType="numberDecimal" android:textCursorDrawable="@drawable/edit_cursor" android:layout_marginEnd="@dimen/padding_normal" app:layout_constraintBaseline_toBaselineOf="@id/tvCategoryName" app:layout_constraintEnd_toEndOf="parent" />
            <View android:id="@id/viewDividerHead" android:background="@color/divider" android:layout_width="match_parent" android:layout_height="1.0px" android:layout_marginTop="12.0dp" app:layout_constraintTop_toBottomOf="@id/lySelectCategoryIcon" />
        </android.support.constraint.ConstraintLayout>
        <com.coderpage.mine.app.tally.module.edit.widget.CategoryViewPager android:id="@id/category_viewpager" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/lyHeadInfo" />
        <com.coderpage.mine.app.tally.ui.widget.ViewPagerFocusView android:layout_gravity="center_horizontal" android:id="@id/focusView" android:padding="@dimen/spacing_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/category_viewpager" app:vpfIndicatorColorNormal="@color/icCategoryIncomeNormal" app:vpfIndicatorColorSelect="@color/black" app:vpfIndicatorHeight="4.0dp" app:vpfIndicatorInterval="@dimen/spacing_normal" app:vpfIndicatorWidth="4.0dp" />
    </LinearLayout>
    <android.support.constraint.ConstraintLayout android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent">
        <View android:background="@color/divider" android:layout_width="match_parent" android:layout_height="1.0px" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/app_text_size_medium" android:textColor="?android:textColorSecondary" android:ellipsize="end" android:gravity="start|center" android:layout_gravity="start|center" android:id="@id/tvDesc" android:tag="binding_6" android:background="@color/transparent" android:layout_width="0.0dp" android:layout_height="match_parent" android:minHeight="45.0dp" android:hint="@string/tally_add_record_note" android:maxLines="1" android:layout_weight="1.0" android:paddingStart="@dimen/padding_normal" android:paddingEnd="@dimen/padding_normal" app:layout_constraintEnd_toStartOf="@id/tvDate" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/app_text_size_small" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/tvDate" android:tag="binding_7" android:layout_width="wrap_content" android:layout_height="match_parent" android:minHeight="45.0dp" android:paddingStart="@dimen/padding_normal" android:paddingEnd="@dimen/padding_normal" app:layout_constraintEnd_toEndOf="parent" />
        <TextView android:gravity="center" android:id="@id/tvNum1" android:tag="binding_8" android:layout_width="0.0dp" android:layout_height="@dimen/tally_input_item_height" android:text="@string/num_1" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvDesc" app:layout_constraintWidth_percent="0.25" style="@style/TextAppearance.TallyNumInputItem" />
        <TextView android:gravity="center" android:id="@id/tvNum2" android:tag="binding_9" android:layout_width="0.0dp" android:layout_height="@dimen/tally_input_item_height" android:text="@string/num_2" android:layout_marginStart="1.0px" app:layout_constraintStart_toEndOf="@id/tvNum1" app:layout_constraintTop_toTopOf="@id/tvNum1" app:layout_constraintWidth_percent="0.25" style="@style/TextAppearance.TallyNumInputItem" />
        <TextView android:gravity="center" android:id="@id/tvNum3" android:tag="binding_10" android:layout_width="0.0dp" android:layout_height="@dimen/tally_input_item_height" android:text="@string/num_3" android:layout_marginStart="1.0px" app:layout_constraintStart_toEndOf="@id/tvNum2" app:layout_constraintTop_toTopOf="@id/tvNum1" app:layout_constraintWidth_percent="0.25" style="@style/TextAppearance.TallyNumInputItem" />
        <android.support.v7.widget.AppCompatImageView android:gravity="center" android:id="@id/ivDelete" android:tag="binding_11" android:layout_width="0.0dp" android:layout_height="@dimen/tally_input_item_height" android:scaleType="center" android:tint="@color/black" android:layout_marginStart="1.0px" app:layout_constraintStart_toEndOf="@id/tvNum3" app:layout_constraintTop_toTopOf="@id/tvNum1" app:layout_constraintWidth_percent="0.25" app:srcCompat="@drawable/ic_delete" style="@style/TextAppearance.TallyNumInputItem" />
        <TextView android:gravity="center" android:id="@id/tvNum4" android:tag="binding_12" android:layout_width="0.0dp" android:layout_height="@dimen/tally_input_item_height" android:layout_marginTop="1.0px" android:text="@string/num_4" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvNum1" app:layout_constraintWidth_percent="0.25" style="@style/TextAppearance.TallyNumInputItem" />
        <TextView android:gravity="center" android:id="@id/tvNum5" android:tag="binding_13" android:layout_width="0.0dp" android:layout_height="@dimen/tally_input_item_height" android:text="@string/num_5" android:layout_marginStart="1.0px" app:layout_constraintStart_toEndOf="@id/tvNum4" app:layout_constraintTop_toTopOf="@id/tvNum4" app:layout_constraintWidth_percent="0.25" style="@style/TextAppearance.TallyNumInputItem" />
        <TextView android:gravity="center" android:id="@id/tvNum6" android:tag="binding_14" android:layout_width="0.0dp" android:layout_height="@dimen/tally_input_item_height" android:text="@string/num_6" android:layout_marginStart="1.0px" app:layout_constraintStart_toEndOf="@id/tvNum5" app:layout_constraintTop_toTopOf="@id/tvNum4" app:layout_constraintWidth_percent="0.25" style="@style/TextAppearance.TallyNumInputItem" />
        <TextView android:gravity="center" android:id="@id/tvNum7" android:tag="binding_15" android:layout_width="0.0dp" android:layout_height="@dimen/tally_input_item_height" android:text="@string/num_7" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvNum4" app:layout_constraintWidth_percent="0.25" style="@style/TextAppearance.TallyNumInputItem" />
        <TextView android:gravity="center" android:id="@id/tvNum8" android:tag="binding_16" android:layout_width="0.0dp" android:layout_height="@dimen/tally_input_item_height" android:text="@string/num_8" app:layout_constraintStart_toEndOf="@id/tvNum7" app:layout_constraintTop_toTopOf="@id/tvNum7" app:layout_constraintWidth_percent="0.25" style="@style/TextAppearance.TallyNumInputItem" />
        <TextView android:gravity="center" android:id="@id/tvNum9" android:tag="binding_17" android:layout_width="0.0dp" android:layout_height="@dimen/tally_input_item_height" android:text="@string/num_9" android:layout_marginStart="1.0px" app:layout_constraintStart_toEndOf="@id/tvNum8" app:layout_constraintTop_toTopOf="@id/tvNum7" app:layout_constraintWidth_percent="0.25" style="@style/TextAppearance.TallyNumInputItem" />
        <TextView android:textSize="@dimen/app_text_size_medium" android:gravity="center" android:id="@id/tvClear" android:tag="binding_18" android:layout_width="0.0dp" android:layout_height="@dimen/tally_input_item_height" android:layout_marginTop="1.0px" android:text="@string/num_clean_to_0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvNum7" app:layout_constraintWidth_percent="0.25" style="@style/TextAppearance.TallyNumInputItem" />
        <TextView android:gravity="center" android:id="@id/tvNum0" android:tag="binding_19" android:layout_width="0.0dp" android:layout_height="@dimen/tally_input_item_height" android:text="@string/num_0" android:layout_marginStart="1.0px" app:layout_constraintStart_toEndOf="@id/tvClear" app:layout_constraintTop_toTopOf="@id/tvClear" app:layout_constraintWidth_percent="0.25" style="@style/TextAppearance.TallyNumInputItem" />
        <TextView android:gravity="center" android:id="@id/tvDot" android:tag="binding_20" android:layout_width="0.0dp" android:layout_height="@dimen/tally_input_item_height" android:text="@string/symbol_dot" android:layout_marginStart="1.0px" app:layout_constraintStart_toEndOf="@id/tvNum0" app:layout_constraintTop_toTopOf="@id/tvClear" app:layout_constraintWidth_percent="0.25" style="@style/TextAppearance.TallyNumInputItem" />
        <TextView android:textSize="@dimen/app_text_size_medium" android:gravity="center" android:id="@id/tvOk" android:tag="binding_21" android:layout_width="0.0dp" android:layout_height="0.0dp" android:text="@string/ok" android:height="0.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/tvNum6" app:layout_constraintTop_toBottomOf="@id/ivDelete" style="@style/TextAppearance.TallyNumInputItem" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
