<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.prolificinteractive.materialcalendarview.MaterialCalendarView android:id="@id/calendarView" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:mcv_selectionColor="@color/colorAccent" app:mcv_showOtherDates="out_of_range" />
    <TextView android:textSize="@dimen/app_text_size_small" android:textColor="@color/appTextColorSecondary" android:id="@id/tvTimeLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_data_pick_time_input_label" android:layout_marginStart="@dimen/padding_normal" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/calendarView" />
    <EditText android:textSize="@dimen/app_text_size_large" android:textStyle="bold" android:textColor="@color/appTextColorPrimary" android:id="@id/etHour" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_micro" android:minWidth="50.0dp" android:hint="@string/hour" android:maxLines="1" android:maxLength="2" android:inputType="numberSigned" android:layout_marginStart="@dimen/padding_normal" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvTimeLabel" />
    <TextView android:textStyle="bold" android:textColor="@color/appTextColorPrimary" android:id="@id/tvSplit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=":" app:layout_constraintBaseline_toBaselineOf="@id/etHour" app:layout_constraintStart_toEndOf="@id/etHour" />
    <EditText android:textSize="@dimen/app_text_size_large" android:textStyle="bold" android:textColor="@color/appTextColorPrimary" android:id="@id/etMinute" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="50.0dp" android:hint="@string/minute" android:maxLines="1" android:maxLength="2" android:inputType="numberSigned" app:layout_constraintBaseline_toBaselineOf="@id/etHour" app:layout_constraintStart_toEndOf="@id/tvSplit" />
</android.support.constraint.ConstraintLayout>
